# strayphotons

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  ADDITIONAL_LICENSES.md  CMakeLists.txt  Cargo.toml  ComponentSummary.md  DOCS.md  Makefile  README.md  TransformComponent.md  ci-build.bat  ci-build.sh  ci-test.sh  compile_shaders.py  compile_shaders.sh  physx-windows-debug.bat  physx-windows-release.bat  run-tests.sh  run.sh  windows_cmake.sh  windows_physx.bat  windows_physx.sh
assets/: CMakeLists.txt  asset-list.txt  cache-assets.py  convert-models.py  default_input_bindings.json  gltf-process.go  sp-convert.sh  sp-scenes.sh  update-mtl.py
assets/fonts/: LICENSE-DroidSans.txt
assets/logos/: sp-laser-caution.xcf  sp-loading.xcf
assets/models/: CMakeLists.txt  ModelProcessing.cmake  box.glb  box.gltf  cornell-box-1.glb  cornell-box-1.gltf  cornell-box-2.glb  cornell-box-2.gltf  cornell-box-3.glb  cornell-box-3.gltf  mcube-physx.glb  mcube-physx.gltf  mirror.glb  mirror.gltf  occluder.glb  occluder.gltf
assets/scenes/: 01-outside.json  01-outside.scene  02-intro.json  02-intro.scene  02-mirrors.json  02-mirrors.scene  03-dark.json  03-dark.scene  03-light-gun.json  03-light-gun.scene  04-symmetry.json  04-symmetry.scene  05-light-gun.json  05-light-gun.scene  CMakeLists.txt  blackhole1.json  blackhole1.scene  blackhole2.json  blackhole2.scene  blackhole3.json  blackhole3.scene  blackhole4.json  blackhole4.scene  blackhole5.json  blackhole5.scene  blackhole6.json  blackhole7.json  blackhole8.json  connect-test1.json  connect-test1.scene  connect-test2.json  connect-test2.scene  connect-test3.json  connect-test3.scene  connect-test4.json  connect-test4.scene  conveyor_test.json  cornell-box-1.json  cornell-box-2.json  cornell-box-3.json  (+45 more)
assets/util/: render-scenes.js
docs_generator/: CMakeLists.txt  README.md  field_docs.hh  main.cc  markdown_gen.hh  schema_gen.hh
ext/: CMakeLists.txt  GameNetworkingSockets.cmake  PhysX.cmake  SPIRV-Reflect.cmake  Tecs.cmake  VulkanMemoryAllocator.cmake  cglm.cmake  cppzmq.cmake  cxxopts.cmake  dynalo.cmake  fpng.cmake  glew.cmake  glfw-egl.cmake  glfw.cmake  glm.cmake  glomerate.cmake  hashes.cmake  imconfig.cpp  imgui.cmake  implot.cmake  kissnet.cmake  libnyquist.cmake  libsoundio.cmake  libzmq.cmake  linenoise.cmake  microtar.cmake  murmurhash.cmake  openvr.cmake  picojson.cmake  protobuf.cmake  resonance-audio.cmake  screen-rs.cmake  screen.cmake  tinygltf.cmake  tinygltfloader.cmake  tracy.cmake  vhacd.cmake
ext/boost/: .gitignore  CMakeLists.txt
ext/fmod/: .gitattributes  CMakeLists.txt
ext/glew/: glew.pc  glewmx.pc
ext/screen/: .gitignore  Cargo.toml  build.rs
ext/screen-rs/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
ext/typeinfo/: typeinfo.h
ext/v-hacd/: CMakeLists.txt  cmake_common.cmake
hull_compiler/: CMakeLists.txt  main.cc
plugins/: CMakeLists.txt  camera_view.c  game_scripts.c  gui_script.h  hello_cpp.cpp  hello_world.c  imgui_graph.cpp  imgui_heatmap.cpp  life.c  racecapture_csv.cpp  shared_events.h
plugins/doomgeneric/: CMakeLists.txt  doomgeneric.cpp  doomkeys.h
rust/: CMakeLists.txt  Cargo.toml  build.rs
rust/sp-rs/: CMakeLists.txt  Cargo.toml  build.rs
rust/sp-rs-wasm/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
rust/sp-rs-winit/: CMakeLists.txt  Cargo.toml  build.rs
rust/sp-sys/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
rust/src/: lib.rs  wasmer_vm.rs
scene_formatter/: CMakeLists.txt  main.cc
sdk/: CMakeLists.txt
sdk/cpp/: CMakeLists.txt
sdk/include/: strayphotons.h
sdk/src/: CMakeLists.txt  DispatchQueue.cc  LockFreeMutex.cc  Utility.cc
sdk_generator/: CMakeLists.txt  gen_components.hh  gen_main.cc
shaders/: CMakeLists.txt  basic_ortho.frag  basic_ortho.vert  gamma_correct.frag  light_sensor_update.comp  lumi_histogram.comp  mirror_scene.comp  mirror_shadow_map.geom  scene.geom  shadow_map.frag  voxel_fill.frag  voxel_fill.vert  voxel_lighting_diffuse.frag  voxel_merge.comp  voxel_mipmap.comp  voxel_shared.glsl  voxel_trace_shared.glsl  voxel_trace_shared2.glsl
shaders/lib/: color_util.glsl  histogram_common.glsl  indirect_commands.glsl  lighting_util.glsl  media_density.glsl  mirror_scene_common.glsl  mirror_shadow_common.glsl  normal_encode.glsl  perlin.glsl  shading.glsl  shadow_sample.glsl  skeleton_animate.glsl  spatial_util.glsl  types_common.glsl  util.glsl  vertex_base.glsl  voxel_shared.glsl  voxel_trace_debug.glsl  voxel_trace_shared.glsl
shaders/opengl/: basic_ortho.vert  basic_post.vert  bloom_blur.frag  bloom_combine.frag  light_sensor_update.comp  mirror_scene.comp  mirror_scene_common.glsl  mirror_shadow_common.glsl  mirror_shadow_map.comp  mirror_shadow_map.frag  mirror_shadow_map.geom  mirror_shadow_map.vert  render_histogram.frag  scene.frag  scene.geom  scene.vert  shadow_map.frag  shadow_map.vert  ssao_blur.frag  texture_factor.comp  view_gbuffer.frag  voxel_fill.frag  voxel_fill.geom  voxel_fill.vert  voxel_lighting.frag
shaders/smaa/: blending.frag  blending.vert  blending_weights.frag  blending_weights.vert  common.glsl  edge_detection.frag  edge_detection.vert  smaa.glsl
shaders/vulkan/: basic_ortho.frag  basic_ortho.vert  basic_ortho_stencil.vert  bloom_combine.frag  exposure_update.comp  gamma_correct.frag  gaussian_blur.frag  gaussian_blur.frag.glsl  gaussian_blur_array.frag  generate_draws_for_view.comp  generate_gbuffer.frag  generate_gbuffer_indirect.frag  generate_warp_geometry_calls.comp  generate_warp_geometry_draws.comp  hrc_debug.frag  hrc_merge_down.comp  hrc_merge_up.comp  hrc_probes.comp  laser_billboard.frag  laser_billboard.vert  laser_contact.frag  laser_contact.vert  laser_lines.frag  light_sensor.comp  lighting.frag  lighting.frag.glsl  lighting_pcf.frag  lighting_transparent.frag  lighting_vsm.frag  lumi_histogram.comp  noop.frag  optic_visibility.frag  optic_visibility.vert  outline_effect.frag  rc_debug.frag  (+41 more)
shared/: CMakeLists.txt
src/: CMakeLists.txt  Common.cc  Common.hh  Shared.cc  StrayPhotons.cc
tests/: CMakeLists.txt  tests.cc  tests.hh
(+1908 files in other folders)
