[workspace]
members = ["rust/sp-rs-winit", "rust/sp-sys", "rust/bin/sp-rs-main"]
exclude = ["rust/sp-rs-wasm"]
resolver = "2"

[profile.dev]
codegen-units = 256
debug = true
lto = false
opt-level = 0

[profile.release]
codegen-units = 1 # Better optimizations
debug = false
lto = true        # Link time optimizations
opt-level = 3     # Optimize for speed
